Whitespace fixes. Add imporant to wireframe style.

--- a/sass/components/wireframe/_wireframe.scss
+++ b/sass/components/wireframe/_wireframe.scss
@@ -16,7 +16,7 @@ $with-wireframes: false !default;
 
   .wireframe,
   %wireframe {
-    outline: 1px solid color(border);
+    outline: 1px solid color(border) !important;
   }
 
   //
